--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://static.vecteezy.com/system/resources/previews/024/822/603/large_2x/cup-of-coffee-with-ice-cartoon-isolate-transparent-background-ai-generated-digital-illustration-png.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Get your Koffein</title>
+    <title>Get your Caffeine</title>
   </head>
   <body>
     <header>
       <ul class="Titel">
-        <h2>Need that Koffein</h2>
+        <h2>Need that Caffeine</h2>
         <img src="https://static.vecteezy.com/system/resources/previews/024/822/603/large_2x/cup-of-coffee-with-ice-cartoon-isolate-transparent-background-ai-generated-digital-illustration-png.png" alt="img">
       </ul>
     </header>
@@ -25,7 +25,7 @@
     <div id="intro-overlay">
     <div class="speech-bubble">
     <p id="typing-text"></p>
-    <button id="start-btn">Give me that Koffein ☕</button>
+    <button id="start-btn">Give me that Caffeine ☕</button>
     </div>
     </div>
 
