--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
       <ul class="Titel">
         <h2>Need that Caffeine</h2>
-        <img src="https://static.vecteezy.com/system/resources/previews/024/822/603/large_2x/cup-of-coffee-with-ice-cartoon-isolate-transparent-background-ai-generated-digital-illustration-png.png" alt="img" id="coffe-icon">
-      <span id="slide-text">
-        Qelle:openstreetmap.org
-      </span>
+        <img src="https://static.vecteezy.com/system/resources/previews/024/822/603/large_2x/cup-of-coffee-with-ice-cartoon-isolate-transparent-background-ai-generated-digital-illustration-png.png" alt="img" id="coffee-icon">
+        <span id="slide-text">
+        Quelle: openstreetmap.org
+        </span>
       </ul>
     </header>
 
